--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 # --------- pytorch --------- #
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==1.12.0+cpu
-torchvision==0.13.0+cpu
+#--extra-index-url https://download.pytorch.org/whl/cpu
+#torch==1.12.0+cpu
+#torchvision==0.13.0+cpu
+
+# this one is for GPU # 
+torch>=1.10.0
+torchvision>=0.11.0
+
 pytorch-lightning==1.7.1
 torchmetrics==0.10.0
 timm==0.6.7
